--- a/contact/index.html
+++ b/contact/index.html
@@ -9,15 +9,13 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a class="item" href="/">Home</a></li>
-                <li><a class="item" href="https://drive.google.com/file/d/1HXg7-FpWBZLEl8uhjm_rpawc8sbORJOH/view" target="_blank">Resume</a></li>
-                <li><a class="item" href="/work/">Work</a></li>
-                <li><a class="item" href="/blog/">Blog</a></li>
-                <li><a class="item" href="/contact/">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="navbar">
+            <div class="navelement"><a class="item" href="/">Home</a></div>
+            <div class="navelement"><a class="item" href="https://drive.google.com/file/d/1HXg7-FpWBZLEl8uhjm_rpawc8sbORJOH/view" target="_blank">Resume</a></div>
+            <div class="navelement"><a class="item" href="/work/">Work</a></div>
+            <div class="navelement"><a class="item" href="/blog/">Blog</a></div>
+            <div class="navelement"><a class="item" href="/contact/">Contact</a></div>
+        </div>
     </header>
     <div class="container">
         <p>You can contact me at giahuy.luong111 [AT] gmail [DOT] com : )</p>
