--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="navbar">
             <div class="navelement"><a class="item" href="/">Home</a></div>
-            <div class="navelement"><a class="item" href="https://drive.google.com/file/d/1HXg7-FpWBZLEl8uhjm_rpawc8sbORJOH/view" target="_blank">Resume</a></div>
+            <div class="navelement"><a class="item" href="https://drive.google.com/file/d/1GrpAP3agEOK-Kf99svkWn3vPdmgWaHxM/view" target="_blank">Resume</a></div>
             <div class="navelement"><a class="item" href="/work/">Work</a></div>
             <div class="navelement"><a class="item" href="/blog/">Blog</a></div>
             <div class="navelement"><a class="item" href="/contact/">Contact</a></div>
@@ -27,7 +27,7 @@
         <p>You can find my work <u><a class="item" href="/work">here</a></u></p>
     </div>
     <div class="container">
-        <p>Or you can see my resume <u><a class="item" href="https://drive.google.com/file/d/1HXg7-FpWBZLEl8uhjm_rpawc8sbORJOH/view" target="_blank">here</a></u></p>
+        <p>Or you can see my resume <u><a class="item" href="https://drive.google.com/file/d/1GrpAP3agEOK-Kf99svkWn3vPdmgWaHxM/view"" target="_blank">here</a></u></p>
     </div>
     <div class="container">
         <p>Sometimes I write stuff on my <u><a class="item" href="/blog/">blog</a></u></p>
