added meeting links

--- a/contact/index.html
+++ b/contact/index.html
@@ -23,6 +23,8 @@
         <p>Or you can message me on <u><a class="item" href="https://www.linkedin.com/in/gia-huy-luong/" target="_blank">LinkedIn</a></u></p>
         <br>
         <p>Or perhaps take a peek at my <u><a class="item" href="https://github.com/AgiLuong" target="_blank">GitHub</a></u></p>
+        <br>
+        <p>Or if you want to schedule a time to <u><a class="item" href="https://calendar.app.google/Go5Pwrrwpd5oBDtb9" target="_blank">meet</a></u></p>
     </div>
 
 </body>
