--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+---
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,15 +10,7 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <header>
-        <div class="navbar">
-            <div class="navelement"><a class="item" href="/">Home</a></div>
-            <div class="navelement"><a class="item" href="https://drive.google.com/file/d/1GrpAP3agEOK-Kf99svkWn3vPdmgWaHxM/view" target="_blank">Resume</a></div>
-            <div class="navelement"><a class="item" href="/work/">Work</a></div>
-            <div class="navelement"><a class="item" href="/blog/">Blog</a></div>
-            <div class="navelement"><a class="item" href="/contact/">Contact</a></div>
-        </div>
-    </header>
+    {% include header.html %}
     <div class="container">
         <h2>Gia Huy (Agi) Luong</h2>
     </div>
