added Jekyll config to create reusable head section

--- a/index.html
+++ b/index.html
@@ -2,20 +2,14 @@
 ---
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agi Luong</title>
-    <link rel="icon" href="/image/phyrexian_blue.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/styles.css">
-</head>
+{% include head.html %}
 <body>
     {% include header.html %}
     <div class="container">
         <h2>Gia Huy (Agi) Luong</h2>
     </div>
     <div class="container">
-        <p>Hi! I am a fourth year CS Major at UVA</p>
+        <p>Hi! I am a Software Engineer at Meta</p>
     </div>
     <div class="container">
         <p>You can find my work <u><a class="item" href="/work">here</a></u></p>
