added more stuffs

--- a/work/index.html
+++ b/work/index.html
@@ -14,10 +14,25 @@
     </div>
     <hr style="width: 50%">
     <div class="content">
+        <h3 style="color:#0081FB">Meta</h3>
+    </div>
+    <div style="padding-left: 25%">
+        <p>Software Enginner, Spring 2024 - Now</p>
+    </div>
+    <div class="content">
+        <p>I'm in Data Infrastructure Org. My team utilizes Metamate - our internal AI tool powered
+            by Llama - to improve data analytic efforts.
+        </p>
+        <p> The "move fast" culture is very real here. Everyone is incredibly smart and I'm 
+            learning a lot just from talking to them.
+        </p>
+    </div>
+    <hr style="width: 50%">
+    <div class="content">
         <h3>LiftLab @ UVA</h3>
     </div>
     <div style="padding-left: 25%">
-        <p>Research Assistant, Fall 2024 - Now</p>
+        <p>Research Assistant, Fall 2024</p>
     </div>
     <div class="content">
         <p>I'm working on predicting and mitigating semantic failures in distributed cloud systems
