--- a/contact/index.html
+++ b/contact/index.html
@@ -1,7 +1,15 @@
 ---
+title: Agi's Contact
 ---
 <!DOCTYPE html>
 <html lang="en">
+<title>
+{% if page.title %}
+    {{ page.title }}
+{% else %}
+    {{ site.title }}
+{% endif %}
+</title>
 {% include head.html %}
 <body>
     {% include header.html %}
