--- a/work/index.html
+++ b/work/index.html
@@ -1,7 +1,15 @@
 ---
+title: Agi's Work
 ---
 <!DOCTYPE html>
 <html lang="en">
+<title>
+{% if page.title %}
+    {{ page.title }}
+{% else %}
+    {{ site.title }}
+{% endif %}
+</title>
 {% include head.html %}
 <body>
     {% include header.html %}
